exports[`cloneObj should copy anonymous function 1`] = `
Object {
  "__metal_devtools_read_only": true,
  "value": "function()",
}
`;

exports[`cloneObj should copy jsx type to be function string 1`] = `
Object {
  "__jsxDOMWrapper": true,
  "__metal_devtools_read_only": true,
  "value": "<JSXElement />",
}
`;

exports[`cloneObj should copy named function 1`] = `
Object {
  "__metal_devtools_read_only": true,
  "value": "fooFn()",
}
`;

exports[`cloneObj should follow redundant-acyclic references 1`] = `
Object {
  "left": Object {
    "ref": Object {
      "name": "leaf",
    },
  },
  "right": Object {
    "ref": Object {
      "name": "leaf",
    },
  },
}
`;

exports[`cloneObj should not follow circular references 1`] = `
Object {
  "ref": Object {
    "ref": Object {
      "ref": "[Circular]",
    },
  },
}
`;

exports[`cloneObj should return item if not an object 1`] = `true`;

exports[`cloneObj should return item if not an object 2`] = `123`;

exports[`cloneObj should return item if not an object 3`] = `"foo"`;

exports[`cloneObj should use constructor name 1`] = `"mockConstructor"`;
